tests/reject/coerce_arg_narrow.ty
# no silent float->int coercion of a call argument (must reject, both compilers)
fn g(n: int) -> int:
    return n
fn main():
    println(str(g(9.9)))
